--- a/boostrap/css/styles.css
+++ b/boostrap/css/styles.css
@@ -10276,3 +10276,8 @@ form .row:first-child .floating-label-form-group {
 .copyright {
   background-color: #1a252f;
 }
+
+.carousel-inner img {
+  width: 100%;
+  height: 100%;
+}
